--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,39 @@ dependencies = [
 required-environments = [
     "sys_platform == 'win32' and platform_machine == 'AMD64'",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.10",
+]
+
+[tool.ruff]
+line-length = 120
+target-version = "py39"
+
+[tool.ruff.lint]
+extend-select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # Pyflakes
+    "I",   # isort
+    "UP",  # pyupgrade
+    "C4",  # comprehensions
+    "B",   # bugbear
+    "ISC", # implicit string concatenation
+    "RET", # return practices
+    "SIM", # simplifications
+    "PTH", # pathlib usage
+    "TD",  # TODO comments
+    "NPY", # NumPy conventions
+    "FA",  # future annotations
+]
+ignore = [
+    "E501", # Line too long, handled by the formatter
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
